--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,19 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+
+/* ---------------  Base Header - Footer Styles ----------------------------- */
+
+header {
+
+}
+
+header .content-wrapper {
+
+}
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
