--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,62 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* General Styles */
+
+html {
+  font-size: 1rem;
+}
+
+body {
+  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+ text-align: left;
+
+ul, 
+ol {
+list-style-type: none;
+}
+
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.875em;
+}
+
+h3, 
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  margin: 20px 0;
+}
+
+p {
+font-size: .875em;
+line-height: 1.125;
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+  font-style: normal;
+
+}
+
+.content-wrapper {
+width: 90%;
+margin: 50px 0;
+}
+
 
 .content-wrapper {
   outline: 3px dotted red;
