--- a/css/main.css
+++ b/css/main.css
@@ -96,11 +96,15 @@ html {
 body {
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
- text-align: left;
+  text-align: left;
+  color: #e2e3ed;
+}
 
 ul, 
 ol {
 list-style-type: none;
+margin: 0;
+padding: 0;
 }
 
 a {
@@ -111,6 +115,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
 
 h3, 
@@ -118,6 +123,7 @@ h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   margin: 20px 0;
+  font-weight: 500;
 }
 
 p {
@@ -158,7 +164,7 @@ header {
 display: flex;
 justify-content: center;
 padding: 15px 0;
-
+background-color: #202322;
 }
 
 header .content-wrapper {
@@ -174,10 +180,14 @@ margin: 0;
 width: 100%;
 height: 1px;
 margin: 10px 0 20px 0;
+background-color: #3a3a3a;
 }
 
 header nav {
 width: 60%;
+font-size: 1.125em;
+font-weight: 700;
+text-transform: uppercase;
 }
 
 header nav ul {
@@ -186,11 +196,18 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
+
 footer {
 display: flex;
 flex-direction: column;
 align-items: center;
 text-align: center;
+background-color: #202322;
+
 }
 
 footer p {
@@ -232,12 +249,50 @@ footer .copyright {
   justify-content: center;
 }
 
+.hero-area h1 {
+font-size: 2.25em;
+font-family: 'Poppins', Helvetica, Arial, sans-serif;
+font-weight: 500;
+line-height: 1.2;
+
+}
+
 /* Aside */
 
 aside {
   display: flex;
   justify-content: center;
+  background-color: #527158;
 }
+
+aside .form {
+margin-top: 30px;
+}
+
+
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 
 /* Features */
 
@@ -264,18 +319,21 @@ margin: 30px 0;
 
 .features p {
 margin: 0;
+text-align: center;
 }
 
 
 /* Reviews */
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
 }
 
 .reviews h2 {
 margin-bottom: 40px;
+line-height: 1;
 }
 
 .reviews h3 {
@@ -287,11 +345,13 @@ margin-bottom: 40px;
    About Page
    ========================================================================== */
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
 }
@@ -304,6 +364,7 @@ margin-bottom: 40px;
    FAQ Page
    ========================================================================== */
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
 }
@@ -318,10 +379,15 @@ margin: 50px 0 0 0;
 
 .faq h2 {
 margin-bottom: 40px;
+line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.333;
 }
 
 
@@ -412,6 +478,35 @@ margin-bottom: 40px;
    These examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+
+   aside .form {
+    margin-top: 30px;
+  }
+   
+  input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    color: #2a423a;
+    font-style: italic;
+    padding: 1em;
+  }
+   
+  input[type=button] {
+    width: 100%;
+    padding: 20px 0;
+    margin-top: 20px;
+    background-color: #2a423a;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    color: #e2e3ed;
+    border: none;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+
+
 
 @media only screen and (min-width: 768px) {
   /* General styles */
