--- a/css/main.css
+++ b/css/main.css
@@ -648,6 +648,10 @@
     .mission-content p {
       width: 45%;
     }
+
+    .map figure {
+      padding-bottom: 45.5%;
+    }
   
     .contact-section .content-wrapper h2 {
       width: 80%;
@@ -760,7 +764,10 @@
     /* ==========================================================================
     About Page
     ========================================================================== */
-  
+    .map figure {
+      padding-bottom: 37.5%;
+    }
+    
     .mission h2,
     .contact-section .content-wrapper h2 {
       width: 95%;
