--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,11 @@
     width: 63%;
     margin: 30px 0;
   }
+
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
   
   .features .features-items {
     display: flex;
@@ -767,7 +772,7 @@
     .map figure {
       padding-bottom: 37.5%;
     }
-    
+
     .mission h2,
     .contact-section .content-wrapper h2 {
       width: 95%;
